--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "download": "^4.2.1",
+    "is-callable": "^1.1.0",
     "opensubtitles-api": "^1.1.1",
     "peerflix": "^0.31.0",
     "request": "^2.64.0",
