--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "peerflix": "^0.31.0",
     "request": "^2.64.0",
     "subplay": "^1.1.0",
+    "time-format-utils": "^1.0.3",
     "webchimera.js": "^0.1.31"
   }
 }
