--- a/package.json
+++ b/package.json
@@ -9,13 +9,18 @@
     "show": false
   },
   "dependencies": {
-    "download": "^4.2.1",
+    "charset-detector": "0.0.2",
+    "download": "^4.3.1",
     "is-callable": "^1.1.0",
-    "opensubtitles-api": "^1.1.1",
-    "peerflix": "^0.31.0",
-    "request": "^2.64.0",
+    "jquery": "^2.1.4",
+    "langmap": "0.0.9",
+    "legacy-encoding": "^3.0.0",
+    "opensubtitles-api": "^1.3.1",
+    "q": "2.0.x",
+    "read-torrent": "1.0.x",
     "subplay": "^1.1.0",
     "time-format-utils": "^1.0.3",
-    "webchimera.js": "^0.1.31"
+    "underscore": "1.6.x",
+    "webchimera.js": "*"
   }
 }
