--- a/package.json
+++ b/package.json
@@ -18,6 +18,6 @@
     "opensubtitles-api": "^1.3.1",
     "subplay": "^1.1.0",
     "time-format-utils": "^1.0.3",
-    "wcjs-prebuilt": "^2.0.6",
+    "wcjs-prebuilt": "^2.0.6"
   }
 }
