edit application name and version

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "arnold-technical-demo",
-  "version": "1.0.0",
+  "name": "arnold",
+  "version": "0.1.0",
   "main": "index.html",
   "window": {
     "frame": false,
